--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,11 @@ body {
   box-sizing: border-box;
 }
 
+.fix-height{
+  min-height: calc(100vh - 150px);
+
+}
+
 /* @layer utilities {
   .text-balance {
     text-wrap: balance;
